--- a/work/webwork/clientweb/src/main/webapp/js_BOM/calc_exam.html
+++ b/work/webwork/clientweb/src/main/webapp/js_BOM/calc_exam.html
@@ -3,7 +3,27 @@
 <head>
 <meta charset="UTF-8">
 <title> New Document </title>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 <script type="text/javascript">
+	var str = ""
+	function button_click(cha) {
+		str += cha
+		$("#mytext").val(str)
+	}
+	function button_click(cha) {
+		str += cha
+		$("#mytext").val(str)
+	}
+	function compute() {
+		var result = eval(str)
+		str = result
+		$("#mytext").val(str)
+	}
+	function clear_del() {
+		str = ""
+		$("#mytext").val(str)
+		
+	}
 </script>
 </HEAD>
 
@@ -15,7 +35,7 @@
 	<form name="myform">
 		<table border="1">
 			<tr>
-				<td colspan="4"><input type="text" size="28" name="mytext"></td>
+				<td colspan="4"><input type="text" size="28" id="mytext"></td>
 			</tr>
 			<tr>
 				<td><input type="button" value="   7   " onclick="button_click('7')"></td>
