sql 제어문과 테이블 편집, 서블릿에서 데이터 받아오기에 대해 학습함

--- a/work/webwork/serverweb/src/main/webapp/viewbasic/login.html
+++ b/work/webwork/serverweb/src/main/webapp/viewbasic/login.html
@@ -5,7 +5,7 @@
 		<title>Insert title here</title>
 	</head>
 	<body>
-		<form action="/serverweb/requesttest.do" method="post">
+		<form action="/serverweb/paramtest.do" method="post">
 			아이디 : <input type="text" name="id" /><br/>
 			패스워드 : <input type="password" name="pass" /><br/>
 			<input type="submit" value="로그인"/>
