요청재지정에 심화

--- a/work/serverwork/serverweb/src/main/webapp/viewbasic/start.html
+++ b/work/serverwork/serverweb/src/main/webapp/viewbasic/start.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="EUC-KR">
+<meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
-<h1>¿äÃ»ÀçÁöÁ¤¿¬½À</h1>
+<h1>ìš”ì²­ì¬ì§€ì •ì—°ìŠµ</h1>
 <hr/>
-<h2><a href="/serverweb/SendRedirectTestServlet">responseÀÇ sendRedirect</h2>
-<h2>RequestDispatcher°´Ã¼°¡ Á¦°øÇÏ´Â forward</h2>
-<h2>RequestDispatcher°´Ã¼°¡ Á¦°øÇÏ´Â include</h2>
+<h2><a href="/serverweb/SendRedirectTestServlet">responseì˜ sendRedirect</a></h2>
+<h2><a href="/serverweb/forward">RequestDispatcherê°ì²´ê°€ ì œê³µí•˜ëŠ” forward</a></h2>
+<h2><a href="/serverweb/include">RequestDispatcherê°ì²´ê°€ ì œê³µí•˜ëŠ” include</h2>
 
 </body>
 </html>
